<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/history"
        android:id="@+id/history"
        app:showAsAction="never"
        >

    </item>
    <item
        android:title="@string/bookmarks"
        android:id="@+id/bookmarks"
        app:showAsAction="never"
        >

    </item> <item
    android:title="@string/download"
    android:id="@+id/download"
    app:showAsAction="never"
    >

    </item>

    <item
    android:title="@string/scanqrcode"
    android:id="@+id/scanqrcode"
    app:showAsAction="never"
    >

</item>

    <item
        android:title="@string/settings"
        android:id="@+id/settings"
        app:showAsAction="never"
        >

    </item>

    <item
        android:title="@string/about"
        android:id="@+id/about"
        app:showAsAction="never"
        >

    </item>


</menu>